--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      li {
+        list-style: none;
+        text-decoration: none;
+        color: black;
+      }
+    </style>
+    <title>Scary Movies</title>
   </head>
-  <body>
+  <body style="background-color: #838282;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +46,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer id="footer">
+      &copy; 2022 Spooky Scary Movies
+    </footer>
   </body>
 </html>
