--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       }
     </style>
     <title>Scary Movies</title>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
   </head>
   <body style="background-color: #838282;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
